Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25762

QNetworkReplyHttpImplPrivate::migrateBackend not implemented

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0
    • 5.0.0
    • Network
    • None
    • bd86c4d089e442dbbef55052c9511b77186221de

    Description

      If the reply is not finished and we find out that it can be migrated we end up in a

          // FIXME
          Q_ASSERT(0);
      

      Looks like this functionality has been removed since the merge of the backend into the QNetworkReplyHttpImpl.

      Attachments

        For Gerrit Dashboard: QTBUG-25762
        # Subject Branch Project Status CR V

        Activity

          People

            xcm Martin Petersson (Inactive)
            xcm Martin Petersson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes