QNetworkReplyHttpImplPrivate::migrateBackend

If the QNetworkSession change while we are handling a QNetworkRequest
we should try to resume this request if possible. In that case we set
the offset for where to continue the request. Abort the operation
in the http thread. And then post the request again. The offset will
then be set using the range header in postRequest() so that the
operation is resumed.

Task-number: QTBUG-25762
Change-Id: Ib7946905bcc633f8cc3dd7a7ad1ae74579e6bf56
Reviewed-by: Shane Kearns <shane.kearns@accenture.com>

cregit: bd86c4d089e442dbbef55052c9511b77186221de https://github.com/qt/qtbase/commit/bd86c4d089e442dbbef55052c9511b77186221de